psnauwaert/feature/FixFacetDto&ResolveEnvVarConfig
